--- a/locales/en/fields.json
+++ b/locales/en/fields.json
@@ -697,5 +697,19 @@
     "number" : "Flight number",
     "date": "Flight date",
     "time": "Flight time"
+  },
+  "stakeholder_group": {
+    "error_message_required": "Select a professional group"
+  },
+  "event_date": {
+    "label": "Event date",
+    "error_message_required": "Enter or select a date"
+  },
+  "event_time": {
+    "label": "Event time",
+    "error_message_required": "Enter a time"
+  },
+  "event_summary": {
+    "error_message_required": "Provide a summary of the event"
   }
 }
