--- a/locales/en/moves.json
+++ b/locales/en/moves.json
@@ -5,6 +5,7 @@
   "move_reference_compact": "<span class=\"govuk-visally-hidden\">Reference: </span>{{reference}}",
   "is_lockout": "Prison lockout",
   "is_lodging": "This move includes an overnight lodge.",
+  "is_section_forty_six": "This move is subject to PACE Section 46.",
   "steps": {
     "person_search": {
       "heading": "Who is being moved?",
